correct layout issue for forecast

--- a/src/App.css
+++ b/src/App.css
@@ -35,12 +35,13 @@ html, body {
 
 }
 .home {
-    height: 550px;
+    height: 450px;
     width: 100%;
     display: flex;
     justify-content: center;
-    color: gray;
-    background-color: black;
+    align-items: center;
+    color: navy;
+    background-color: lightskyblue;
 }
 .about {
     height: 550px;
